adding a simple restassure test for loginpage.

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,16 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>CucumberTestRunner.TestRunnerTestNG</td>
+<td>APITest.loginLogOut_apiTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>run_cukes</td>
-<td>cucumber </td>
-</tr>
+<td>submitForm</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
