--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,95 +31,14 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">0.7 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">4.1 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Default test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">CucumberTestRunner.TestRunnerTestNG</td><td><a href="#m1"><b>run_cukes</b> (cucumber) ("Runs Cucumber Features")</a></td><td class="numi">1</td><td>1603757548526</td><td class="numi">720</td></tr>
+<tr><th colspan="4">Default test &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="1">APITest.loginLogOut_apiTest</td><td><a href="#m1"><b>submitForm</b>  </a></td><td class="numi">1</td><td>1603847153248</td><td class="numi">4093</td></tr>
 </table>
 <h1>Default test</h1>
-<h2 id="m1">CucumberTestRunner.TestRunnerTestNG:run_cukes</h2>
-<div style="padding-left:3em">
-<h3>Test Messages</h3>
-<div "featureFile">Feature File: loginPageTest.feature</div><br/>
-<div "feature">Feature: Login test for internet.herokuapp</div><br/>
-<div "scenarioOutline">Scenario Outline: Login test with different credentials</div><br/>
-<div "result">When  I type user name=&quot;&lt;userName&gt;&quot; and password=&quot;&lt;password&gt;&quot; (failed : 0s)</div><br/>
-<div "scenario">Scenario Outline: Login test with different credentials</div><br/>
-<div "result">And  I click Login button (skipped)</div><br/>
-<div "result">Then  &quot;&lt;url&gt;&quot; should open (skipped)</div><br/>
-<div "result">Given  I am in internet.herokuapp login page &quot;https:&#x2F;&#x2F;the-internet.herokuapp.com&#x2F;login&quot; (skipped)</div><br/>
-<div "result">When  I type user name=&quot;tomsmith&quot; and password=&quot;SuperSecretPassword!&quot; (failed : 0s)</div><br/>
-<div "scenario">Scenario Outline: Login test with different credentials</div><br/>
-<div "result">And  I click Login button (skipped)</div><br/>
-<div "result">Then  &quot;&#x2F;secure&quot; should open (skipped)</div><br/>
-<div "result">Given  I am in internet.herokuapp login page &quot;https:&#x2F;&#x2F;the-internet.herokuapp.com&#x2F;login&quot; (skipped)</div><br/>
-<div "result">When  I type user name=&quot;&quot; and password=&quot;SuperSecretPassword!&quot; (failed : 0s)</div><br/>
-<div "scenario">Scenario Outline: Login test with different credentials</div><br/>
-<div "result">And  I click Login button (skipped)</div><br/>
-<div "result">Then  &quot;&#x2F;login&quot; should open (skipped)</div><br/>
-<div "result">Given  I am in internet.herokuapp login page &quot;https:&#x2F;&#x2F;the-internet.herokuapp.com&#x2F;login&quot; (skipped)</div><br/>
-<div "result">When  I type user name=&quot;tomsmith&quot; and password=&quot;&quot; (failed : 0s)</div><br/>
-<div "scenario">Scenario Outline: Login test with different credentials</div><br/>
-<div "result">And  I click Login button (skipped)</div><br/>
-<div "result">Then  &quot;&#x2F;login&quot; should open (skipped)</div><br/>
-<div "result">Given  I am in internet.herokuapp login page &quot;https:&#x2F;&#x2F;the-internet.herokuapp.com&#x2F;login&quot; (skipped)</div><br/>
-<div "result">When  I type user name=&quot;tomsmith&quot; and password=&quot;SuperSecretPassword&quot; (failed : 0s)</div><br/>
-<div "scenario">Scenario Outline: Login test with different credentials</div><br/>
-<div "result">And  I click Login button (skipped)</div><br/>
-<div "result">Then  &quot;&#x2F;login&quot; should open (skipped)</div><br/>
-<div "result">Given  I am in internet.herokuapp login page &quot;https:&#x2F;&#x2F;the-internet.herokuapp.com&#x2F;login&quot; (skipped)</div><br/>
-<div "result">When  I type user name=&quot;tomsmith1&quot; and password=&quot;SuperSecretPassword!&quot; (failed : 0s)</div><br/>
-<div "scenario">Scenario Outline: Login test with different credentials</div><br/>
-<div "result">And  I click Login button (skipped)</div><br/>
-<div "result">Then  &quot;&#x2F;login&quot; should open (skipped)</div><br/>
-<div "result">Given  I am in internet.herokuapp login page &quot;https:&#x2F;&#x2F;the-internet.herokuapp.com&#x2F;login&quot; (skipped)</div><br/>
-<div "result">When  I type user name=&quot;tomsmith1&quot; and password=&quot;SuperSecretPassword&quot; (failed : 0s)</div><br/>
-<div "scenario">Scenario Outline: Login test with different credentials</div><br/>
-<div "result">And  I click Login button (skipped)</div><br/>
-<div "result">Then  &quot;&#x2F;login&quot; should open (skipped)</div><br/>
-<div "result">Given  I am in internet.herokuapp login page &quot;https:&#x2F;&#x2F;the-internet.herokuapp.com&#x2F;login&quot; (skipped)</div><br/>
-<h3>Failure</h3>
-<p>java.lang.NullPointerException</p>
-cucumber.api.testng.TestNGCucumberRunner.runCukes(TestNGCucumberRunner.java:48)
-<br/>at cucumber.api.testng.AbstractTestNGCucumberTests.run_cukes(AbstractTestNGCucumberTests.java:14)
-<br/>at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-<br/>at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-<br/>at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-<br/>at java.base/java.lang.reflect.Method.invoke(Method.java:566)
-<br/>at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)
-<br/>at org.testng.internal.MethodInvocationHelper$1.runTestMethod(MethodInvocationHelper.java:182)
-<br/>at cucumber.api.testng.AbstractTestNGCucumberTests.run(AbstractTestNGCucumberTests.java:19)
-<br/>at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-<br/>at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-<br/>at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-<br/>at java.base/java.lang.reflect.Method.invoke(Method.java:566)
-<br/>at org.testng.internal.MethodInvocationHelper.invokeHookable(MethodInvocationHelper.java:194)
-<br/>at org.testng.internal.Invoker.invokeMethod(Invoker.java:707)
-<br/>at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:901)
-<br/>at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1231)
-<br/>at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)
-<br/>at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)
-<br/>at org.testng.TestRunner.privateRun(TestRunner.java:767)
-<br/>at org.testng.TestRunner.run(TestRunner.java:617)
-<br/>at org.testng.SuiteRunner.runTest(SuiteRunner.java:334)
-<br/>at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)
-<br/>at org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)
-<br/>at org.testng.SuiteRunner.run(SuiteRunner.java:240)
-<br/>at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-<br/>at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
-<br/>at org.testng.TestNG.runSuitesSequentially(TestNG.java:1198)
-<br/>at org.testng.TestNG.runSuitesLocally(TestNG.java:1123)
-<br/>at org.testng.TestNG.run(TestNG.java:1031)
-<br/>at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-<br/>at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-<br/>at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-<br/>1 lines not shown
-<p>Caused by null</p>
-stepDefinitions.LoginTest.i_am_in_internet_herokuapp_login_page(LoginTest.java:19)
-<br/>at ?.Given I am in internet.herokuapp login page &quot;https://the-internet.herokuapp.com/login&quot;(loginPageTest.feature:23)
-<br/>1 lines not shown
-</div>
+<h2 id="m1">APITest.loginLogOut_apiTest:submitForm</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
